help menu added
added help menu and a way of returning back to the main menu.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ CiderDebugger.lua
 img/._helpbtn.png
 
 img/._helpbtn@2x.png
+
+img/._helpbackbtn.png
+
+img/._helpbackbtn@2x.png
+
+img/._hmScreen.png
+
+img/._hmScreen@2x.png
